--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,10 +11,16 @@ jobs:
         uses: actions/checkout@master
       - name: Build
         run: npm install && npm run build
+      # - name: Deploy
+      #   uses: JamesIves/github-pages-deploy-action@releases/v3
+      #   with:
+      #     ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+      #     BASE_BRANCH: master # The branch the action should deploy from.
+      #     BRANCH: gh-pages # The branch the action should deploy to.
+      #     FOLDER: dist
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@releases/v3
-        with:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BASE_BRANCH: master # The branch the action should deploy from.
-          BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: dist
+        uses: peaceiris/actions-gh-pages@v2
+          env:
+            ACTIONS_DEPLOY_KEY: ${{ secrets.ACCESS_TOKEN }}
+            PUBLISH_BRANCH: gh-pages
+            PUBLISH_DIR: ./dist
